--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -24,11 +24,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="vacancy: ${vacancies}">
-                <td th:text="${vacancy.id}" />
-                <td th:text="${vacancy.title}" />
-                <td th:text="${vacancy.description}" />
-                <td th:text="${vacancy.creationDate}" />
+            <tr th:each="candidate: ${candidates}">
+                <td th:text="${candidate.id}"></td>
+                <td th:text="${candidate.name}"></td>
+                <td th:text="${candidate.description}"></td>
+                <td th:text="${{candidate.creationDate}}"></td>
             </tr>
             </tbody>
         </table>
