--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -25,10 +25,10 @@
             </thead>
             <tbody>
             <tr th:each="vacancy: ${vacancies}">
-                <td th:text="${vacancy.id}" />
-                <td th:text="${vacancy.title}" />
-                <td th:text="${vacancy.description}" />
-                <td th:text="${vacancy.creationDate}" />
+                <td th:text="${vacancy.id}"></td>
+                <td th:text="${vacancy.title}"></td>
+                <td th:text="${vacancy.description}"></td>
+                <td th:text="${{vacancy.creationDate}}"></td>
             </tr>
             </tbody>
         </table>
