--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -21,6 +21,7 @@
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link active" th:href="@{/candidates}">Кандидаты</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                 </div>
             </div>
         </div>
@@ -32,7 +33,6 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Имя</th>
-                    <th scope="col">Описание</th>
                     <th scope="col">Дата создания</th>
                 </tr>
                 </thead>
@@ -40,7 +40,6 @@
                 <tr th:each="candidate: ${candidates}">
                     <td th:text="${candidate.id}" />
                     <td th:text="${candidate.name}" />
-                    <td th:text="${candidate.description}"/>
                     <td th:text="${{candidate.creationDate}}"/>
                 </tr>
                 </tbody>
