--- a/src/main/resources/templates/candidates/one.html
+++ b/src/main/resources/templates/candidates/one.html
@@ -41,6 +41,12 @@
         <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25"
                   placeholder="Опишите чем Вы занимались во время обучения/работы, какие проекты вели/реализовывали."></textarea>
       </div>
+      <div class="mb-3">
+        <label for="city"><b>Город</b></label>
+        <select class="form-control" id="city" name="cityId">
+          <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
+        </select>
+      </div>
       <div class="mb-3 row">
         <div class="col-6"></div>
         <div class="col-6">
