--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -28,12 +28,16 @@
         </div>
     </nav>
     <div class="container">
-        <form class="mt-3">
+        <form class="mt-3" th:action="@{/candidates/create}" method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="name" class="form-label"><b>ФИО</b></label>
                 <div class="col-5">
-                <input type="text" class="form-control" id="name" placeholder="Иванов Иван Иванович">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Иванов Иван Иванович">
                 </div>
+            </div>
+            <div class="mb-3">
+                <label for="formFile"><b>Фото</b></label>
+                <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file" required>
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label">
