2. CandidateRepository. Хранение кандидатов. [#504861]

--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -43,7 +43,7 @@
                 <label for="description" class="form-label">
                     <b>Желаемая должность, опыт работы, описание рабочих/учебных проектов</b>
                 </label>
-                <textarea class="form-control" id="description" rows="25"
+                <textarea class="form-control" id="description" name="description" rows="25"
                           placeholder="Опишите чем Вы занимались во время обучения/работы, какие проекты вели/реализовывали."></textarea>
             </div>
             <div class="mb-3">
