--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,13 +17,16 @@
         <div class="container">
             <a class="navbar-brand" href="/">Job4jDreamJob</a>
             <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
+                <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link active" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
                 </div>
+            </div>
+            <div class="d-flex">
+                <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
             </div>
         </div>
     </nav>
@@ -34,6 +37,7 @@
             <li><a th:href="@{/candidates}">Кандидаты</a></li>
             <li><a th:href="@{/vacancies/create}">Создать вакансию</a></li>
             <li><a th:href="@{/candidates/create}">Создать резюме</a></li>
+            <li><a th:href="@{/users/register}">Регистрация</a></li>
         </ul>
     </div>
 </div>
